Changed format of queue item

--- a/config/i18n/en.json
+++ b/config/i18n/en.json
@@ -95,8 +95,8 @@
     "cmd-queue-none": "There are no songs queued! Queue something with {}play.",
     "cmd-queue-playing-author": "Currently playing: `{0}` added by `{1}` {2}\n",
     "cmd-queue-playing-noauthor": "Currently playing: `{0}` {1}\n",
-    "cmd-queue-entry-author": "{0} -- `{1}` - `{2}` by `{3}`",
-    "cmd-queue-entry-noauthor": "{0} -- `{1}` - `{2}`",
+    "cmd-queue-entry-author": "{0} -- `{1}` - `[{2}]` by `{3}`",
+    "cmd-queue-entry-noauthor": "{0} -- `{1}` - `[{2}]`",
     "cmd-clean-invalid": "Invalid parameter. Please provide a number of messages to search.",
     "cmd-clean-reply": "Cleaned up {0} message{1}.",
     "playlists-noperms": "You are not allowed to request playlists",
